--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <h1>HEADER</h1>
         <title>My awesome web page</title>
-    </head>
+<img src="https://avatars.githubusercontent.com/u/102478196?v=4">
+
 
   <body>
     Hello there, awesome person! 
