--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 
   <body>
     Hello there, awesome person! 
+      <ol>
+          <li>This</li>
+          <li>is an</li>
+          <li>ordered list</li>
+      </ol>
+   
+      <ul>
+          <li>This</li>
+          <li>is an</li>
+          <li>unordered list</li>
+      </ul>
+           
   </body>
 
 </html>
